--- a/src/assets/styles/variable.scss
+++ b/src/assets/styles/variable.scss
@@ -4,3 +4,5 @@ $cream-white: #F7FFF7;
 $pastel-red: #FF6B6B;
 $light-yellow: #FFE66D;
 $maize-yellow: #E5BA31;
+$dark-grey: #252525;
+$light-grey: #D8D8D8;
