update skill and project pages

--- a/src/assets/styles/components/_color.scss
+++ b/src/assets/styles/components/_color.scss
@@ -6,3 +6,5 @@ $light-yellow: #FFE66D;
 $maize-yellow: #E5BA31;
 $dark-grey: #252525;
 $light-grey: #D8D8D8;
+$grass-green: #12A579;
+$blue-grey: #707685;
